         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.

WIP      Create a new infolabel $INFO[ListItem.Property(history)] which shows the contents
         of history.dat for a machine.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2916270#pid2916270

FIX      Fixed parsing of History.dat 2.17.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2913592#pid2913592


[B]Advanced MAME Launcher | version 0.9.11 | 26 November 2019[/B]

FEATURE  [CORE] For Software Lists, instead of showing the number of ROMs show the number
         of Items in Flat display mode or Parents in Parent/Clone display mode.

FEATURE  [CORE] Support for MASH's Alltime.ini.

FEATURE  [CORE] Improvements in the JSON index of DAT files. Use dictionaries and not list
         to reduce JSON file size and speed up data access.

FEATURE  [CORE] Improved main statistics.

FEATURE  [CORE] Improve some Software List long names until they are fixed in MAME repository.

FIX      Fixed conversion to int of addon version str in fs_AML_version_str_to_int()

FIX      New history.dat makes AML to crash because one entry could be for more than one
         machine. In addition, the same description can be used over several SLs.


[B]Advanced MAME Launcher | version 0.9.10 | 10 May 2019[/B]

FEATURE  Option to disable Software Lists at all in Vanilla MAME mode.

FEATURE  Management of MAME Favourite objects (delete missing, delete single).

FEATURE  Management of SL Favourite objects (delete missing, delete single).

FEATURE  Initial support for Retroarch MAME 2003 Plus core.

FEATURE  [CORE] Ability to export DAT files in Logiqx format for MAME ROMs and MAME CHDs.

FEATURE  [CORE] Differentiate between Non-merged and Fully non-merged MAME ROM sets.
         Non-merged sets do not include BIOS and device ROMs.