@@ -41,11 +41,10 @@
     <setting label="Hide non-working machines" type="bool" default="false" id="display_hide_nonworking" />
     <setting label="Display machines with available ROMs only" type="bool" default="false" id="display_rom_available" />
     <setting label="Display machines with available CHDs only" type="bool" default="false" id="display_chd_available" />
-    <setting label="Display SL with available ROMS/CHDs only" type="bool" default="false" id="display_SL_rom_chd_available" />
-    <setting label="Display MAME ROM flags" type="bool" default="false" id="display_MAME_rom_name" />
-    <setting label="Display SL ROM flags" type="bool" default="false" id="display_SL_rom_name" />
+    <setting label="Display SL items with available ROMS/CHDs only" type="bool" default="false" id="display_SL_items_available" />
+    <setting label="Display MAME ROM flags" type="bool" default="true" id="display_MAME_flags" />
+    <setting label="Display SL ROM flags" type="bool" default="true" id="display_SL_flags" />
 </category>
-
 <category label="Display II">
     <!-- <setting id="separator" type="lsep" label="Addon filters" /> -->
     <setting label="Display Main filters" type="bool" default="true" id="display_main_filters" />
